[Welcome] Fix z-index bug that made buttons not clickable

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -56,6 +56,7 @@ html {
     position: relative;
     padding: 100px 0 100px 0;
     height: 350px;
+    z-index: 1;
 }
 
 .svg-overlay {
